--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "morgan": "^1.10.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
